# TokyoRadar

./: .dockerignore  .env.example  .gitignore  .tiltignore  CLAUDE.md  Makefile  README.md  Tiltfile  docker-compose.dev.yml  docker-compose.yml
agent/: Dockerfile  __main__.py  celery_app.py  cli.py  core.py  matching.py  mcp_client.py  prompts.py  recorder.py  requirements.txt  snapshot.py  tasks.py  tools.py  tracker.py
ai_pipeline/: Dockerfile  celery_app.py  requirements.txt  summarize.py  tasks.py  translate.py
backend/: requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  mcp_server.py  registry.py
data/: brands_seed.json  categories_seed.json  proxy_services_seed.json  retailers_seed.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: brands.spec.ts  buyguide.spec.ts  debug.spec.ts  home.spec.ts  i18n.spec.ts  navigation.spec.ts  retailers.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: alembic.ini
migrations/alembic/: env.py
scraper/: Dockerfile  celery_app.py  mcp_helpers.py  mcp_server.py  requirements.txt  tasks.py  validation.py
scraper/sources/: __init__.py  base.py  fashion_press.py  registry.py  (+2 more)
scripts/: backup_db.sh  seed_db.py
shared/: pyproject.toml
shared/tokyoradar_shared/: config.py  database.py
shared/tokyoradar_shared/models/: __init__.py  agent_job.py  brand.py  category.py  collection.py  item.py  media.py  price_listing.py  proxy_service.py  retailer.py  scrape_job.py
(+71 files in other folders)
