[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokyoradar-shared"
version = "0.1.0"
description = "Shared models, config, and database for TokyoRadar services"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.1",
    "alembic>=1.13.1",
]

[tool.setuptools.packages.find]
include = ["tokyoradar_shared*"]
